Fix button alignment bug related to the doctype fix earlier

--- a/public/rare.css
+++ b/public/rare.css
@@ -301,7 +301,7 @@ a
 	float:right;
 	left:-30px;
 	position:relative;
-	top:-75px;
+	top:-65px;
 }
 
 #task .meta .priority
